--- a/index.html
+++ b/index.html
@@ -12,53 +12,82 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 
 <body>
-  <div class="top-container">
-    <img class="cloud1" src="image/cloud.png" alt="cloud-img">
-    <h1>I'm Amir</h1>
-    <h2>a <span class="underline">pro</span>grammer</h2>
-    <img class="cloud2" src="image/cloud.png" alt="cloud-img">
-    <img src="image/mountain.png" alt="mountain-img">
-  </div>
-
-  <div class="middle-container">
-    <div class="profile">
-      <img class="profile-image"src="image\formal picture.jpg" alt="">
-      <h2>Hello.</h2>
-      <p>I'm a new web developer and data scientist learner in Malaysia. I have passion in programming and love challenges.</p>
-    </div>
-    <hr>
-    <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="laptop-image" src="image/laptop-image.webp" alt="Web development sticker">
-        <h3>Web development</h3>
-        <p>I have skills in basic web development programming skills such as HTML, CSS, Javascript, Github</p>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-transparent">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">AvidPro</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Workplace</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="skill-row">
-        <img class="statistics-image" src="image/statistic image.webp" alt="Data science sticker">
-        <h3>Data Science</h3>
-        <p>I am well-verse in statistics and have skills in basic data science such as Excel, Python, SQL,Kaggle.</p>
+    </nav>
+  </header>
+
+  <main>
+    <div class="top-container flex-container">
+      <img class="cloud1" src="image/cloud.png" alt="cloud-img">
+      <img class="cloud2" src="image/cloud.png" alt="cloud-img">
+      <h1 class="display-1">I'm Amir</h1>
+      <h2 class="display-6">a <span class="underline">pro</span>grammer</h2>
+      <img class="rabbit" src="image/rabbit peeking.gif" alt="rabbit peeking gif">
       </div>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>I am currently available for freelance work</h3>
-      <p>If you want a basic project you want to get start, need my help with something or just fancy to say hey</p>
-      <a class="btn" href="mailto:muhdamir.zainuddin99@gmail.com" target="_blank">CONTACT ME</a>
+
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profile-image"src="image\formal picture.jpg" alt="">
+        <h2 class="display-6">Hello.</h2>
+        <p>I'm a new web developer and data scientist learner in Malaysia. I have passion in programming and love challenges.</p>
+      </div>
+      <hr class="hr">
+      <div class="skills">
+        <h2 class="display-6">My Skills.</h2>
+        <div class="skill-row">
+          <img class="laptop-image" src="image/laptop-image.webp" alt="Web development sticker">
+          <h3>Web development</h3>
+          <p>I have skills in basic web development programming skills such as HTML, CSS, Javascript, Github</p>
+        </div>
+        <div class="skill-row">
+          <img class="statistics-image" src="image/statistic image.webp" alt="Data science sticker">
+          <h3>Data Science</h3>
+          <p>I am well-verse in statistics and have skills in basic data science such as Excel, Python, SQL,Kaggle.</p>
+        </div>
+      </div>
+      <hr class="hr">
+      <div class="contact-me">
+        <h2 class="display-6">Get In Touch</h2>
+        <h3>I am currently available for freelance work</h3>
+        <p>If you want a basic project you want to get start, need my help with something or just fancy to say hey</p>
+        <a class="btn btn-outline-success" href="mailto:muhdamir.zainuddin99@gmail.com" target="_blank">CONTACT ME</a>
+      </div>
     </div>
-  </div>
-
-
-  <div class="bottom-container">
+  </main>
+  <footer>
     <a class="footer-link" href="https://www.linkedin.com/in/muhammad-amir-mohd-zainuddin-2b608b241/" target="_blank">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/Amrzai_">Twitter</a>
+    <a class="footer-link" href="https://twitter.com/Amrzai_" target="_blank"  >Twitter</a>
     <a href="#" target="_blank">Website</a>
     <p class="copyright">© Amir.</p>
-  </div>
+  </footer>
+
 
 </body>
 
